# PolytecController

./: .gitignore  LICENSE  README.md  pyproject.toml
src/PolytecController/: classes.py  common_postprocessing.py  enumerations.py  polyfile.py  polysoft.py  polytec_common.py  utils.py
tests/: Settings.set  createSvd.ipynb  min_working_example.py  settings_2.set  test_polyfile.py  test_polysoft.py
