[project]
name = "PolytecController"
version = "2.0.0"
description = "A package to control a polytec Laser Doppler Vibrometer and easily extract data from the files it creates"
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "opencv-python>=4.11.0.86",
    "pypylon>=4.1.0",
    "pytest>=8.3.5",
    "pywin32>=309",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/PolytecController"]

#[tool.uv]
#package=true

[tool.pytest.ini_options]
pythonpath="src/PolytecController"
